<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App</string>
    <!-- string text for questions -->
    <string name="header_text">Questions Marked * Are Mandatory</string>
    <string name="question1">1. Which of the following are Java keywords?</string>
    <string name="question2">2. What does JDK stands for?</string>
    <string name="question3">3. What is <i>this</i> in Java?</string>
    <string name="question4">4. Can we overload main() method? *</string>
    <string name="question5">5. Check the correct ones</string>
    <string name="question6">6. Can constructor inherited? *</string>

    <!-- string text for checkboxes, submit and radio buttons -->
    <string name="abstract_">abstract</string>
    <string name="break_">break</string>
    <string name="newVar8">newVar8</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="string_immutable">String is immutable</string>
    <string name="stringbuffer_mutable">StringBuffer is mutable</string>
    <string name="submit">Submit</string>

    <!-- String used in class files -->
    <string name="jdk">Java Development Kit</string>
    <string name="object_1">Object</string>
    <string name="object_2">Current Object</string>
    <string name="question4_toast">Please answer Question#4</string>
    <string name="question6_toast">Please answer Question#6</string>
    <string name="total_score_message">Total Score earned:: <xliff:g id="int" example="5">%d</xliff:g></string>

</resources>
