<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8E1"
    tools:context="cloud.aakashsharan.quizapp.MainActivity">

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/header_text"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question1" />

            <LinearLayout style="@style/CheckBoxViewStyle">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abstract_" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/break_" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/newVar8" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question2" />

            <EditText style="@style/EditTextViewStyle" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question3" />

            <EditText style="@style/EditTextViewStyle" />

        </LinearLayout>


        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question4" />

            <RadioGroup style="@style/RadioGroupStyle">

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/true1_radio_button"
                    android:text="@string/true_"/>

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/false1_radio_button"
                    android:layout_marginLeft="35dp"
                    android:text="@string/false_"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question5" />

            <LinearLayout style="@style/CheckBoxViewStyle">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_immutable" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/stringbuffer_mutable" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/LinearLayoutStyle">

            <TextView
                style="@style/QuestionsViewStyle"
                android:text="@string/question6" />

            <RadioGroup style="@style/RadioGroupStyle">

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/true2_radio_button"
                    android:text="@string/true_" />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/false2_radio_button"
                    android:layout_marginLeft="35dp"
                    android:text="@string/false_"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <Button
                style="@style/FooterStyle"
                android:text="@string/submit" />

            <TextView
                style="@style/FooterStyle"
                android:text="Score" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
